# Bare_Metal

./: .gitignore  Cargo.toml  Readme.md  test.ipynb
benches/: bench_001.rs  bench_002.rs  bench_003.rs  bench_007.rs  bench_008.rs  bench_009.rs  bench_011.rs  bench_013.rs  bench_017.rs  bench_018.rs  bench_020.rs  bench_023.rs  bench_025.rs  bench_026.rs  bench_027.rs  bench_028.rs  bench_030.rs  bench_034.rs  bench_037.rs  bench_043.rs  bench_045.rs  bench_046.rs  bench_050.rs  bench_054.rs  bench_055.rs  bench_056.rs  bench_058.rs  bench_061.rs  bench_062.rs  bench_063.rs  bench_064.rs  bench_074.rs  bench_079.rs  bench_080.rs  bench_088.rs  bench_092.rs  bench_094.rs  bench_095.rs  bench_096.rs  bench_097.rs  (+37 more)
benches_rust_analyzer_ignore/: bench_002.rs  bench_004.rs  bench_005.rs  bench_006.rs  bench_010.rs  bench_012.rs  bench_014.rs  bench_015.rs  bench_016.rs  bench_019.rs  bench_021.rs  bench_022.rs  bench_029.rs  bench_032.rs  bench_039.rs  bench_040.rs  bench_048.rs  bench_051.rs  bench_065.rs  bench_078.rs  bench_093.rs  bench_098.rs  bench_099.rs  bench_1089.rs  bench_1123.rs  bench_1137.rs  bench_1208.rs  bench_122.rs  bench_1352.rs  bench_146.rs  bench_162.rs  bench_168.rs  bench_1790.rs  bench_1863.rs  bench_1910.rs  bench_2140.rs  bench_2349.rs  bench_2379.rs  bench_2579.rs  bench_2873.rs  (+16 more)
src/: code.rs  lib.rs  main.rs
src/algorithms/: dynamic_connectivity.rs  matrix.rs  mod.rs  search.rs
src/contests/: biweekly_129.rs  mod.rs  weekly_3.rs
src/data_structures/: circular_queue.rs  linked_lists.rs  mod.rs
src/easy/: _001.rs  _009.rs  _013.rs  (+47 more)
(+121 files in other folders)
