[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
nalgebra = "0.32.5"
num-bigint = { version = "0.4.6", features = ["rand"] }
once_cell = "1.20.2"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-test = "0.2.4"
